Bug fix on the release branch: 2717008 Extra whitespace on finding detail page
Fix main.css to remove the extra whitespace

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -103,7 +103,7 @@ div.section {
     padding: 10px;
     position: relative;
     height: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 /* Panels are a subdivision of the sections */
